@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/scribe",
     "description": "Scribe client library",
     "type": "library",
@@ -12,7 +11,7 @@
             "role": "lead"
         }
     ],
-    "time": "2021-07-04",
+    "time": "2021-11-22",
     "repositories": [
         {
             "type": "composer",
@@ -20,8 +19,8 @@
         }
     ],
     "require": {
-        "php": "^7",
-        "horde/thrift": "* || dev-FRAMEWORK_6_0"
+        "php": "^7 || ^8",
+        "horde/thrift": "*"
     },
     "require-dev": {},
     "suggest": {},
@@ -29,5 +28,6 @@
         "psr-0": {
             "Horde_Scribe": "lib/"
         }
-    }
+    },
+    "autoload-dev": []
 }
