@@ -8,8 +8,9 @@
   license:
     identifier: Apache 2.0
     uri: http://www.horde.org/licenses/apache
-  notes: |+
-    
+  notes: |
+    [rla] Nominally release for PHP 8.
+    |+
 3.0.0alpha1:
   api: 1.0.0
   state:
