@@ -2,7 +2,8 @@
 v3.0.0alpha2
 ------------
 
-
+[rla] Nominally release for PHP 8.
+|+
 
 
 ------------
